ZX81QuickLook/QuickLook/Resources/source.css
@font-face {
    /* define the ZX81 font for display where its source file */
    font-family: "zx81";
    src: url(zx81_vdu.ttf);
}

html{
    box-sizing:border-box;
}

html,body{
    font-family:Verdana,sans-serif;
    font-size:16px;
    line-height:1.5;
    height: 100vh; /* 100% viewport height & width */
    width: 100vw;
    margin: auto;   /* eliminate any margins on sides */
    overflow: hidden; /* prevent elastic scrolls in main content section*/
    display: flex; /* contain within viewport */
}

body {
    flex-direction: column; /* sections layout vertically */
}

.mainContainer{
    padding:0.01em 16px;
}

.bar{
    color:#fff!important; /* white font */
    background-color:#000!important; /* black background */
    display:inline-block;
    flex-basis: auto; /* These flex settings ensure the bar doesn't expand/shrink */
    flex-grow: 0;
    flex-shrink: 0;
}

.barItemContainer {
    text-align: center; /* center items in middle of bar */
}

.barItem{
    padding:4px 16px;
    width:auto;
    border:none;
    display:inline-block;
    outline:0;
}

.barButton,.infoButton{
    border:none;
    display:inline-block;
    padding:4px 16px;
    vertical-align:middle;
    overflow:hidden;
    text-decoration:none;
    color:inherit;
    background-color:inherit;
    text-align:center;
    cursor:pointer;
    white-space:nowrap;
}

.barButton:hover{
    color:#000!important;
    background-color:#ccc!important;
}

.barButton.active{
    color:#000!important;
    background-color:#bbb!important;
}

.infoButton {
    color: darkgrey;
    position:absolute;
    right:0px;
}

.infoButton:hover {
    color: white;
}

button{
    font:inherit;
    margin:0;
}

.contentContainer {
    max-height: 100%; /* full height of container */
    max-width: 100vw; /* 100% of viewport width*/
    padding: 10px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column; /* sections within layout vertically */
}

.slider {
    display: inline-block;
}

select, input {
    vertical-align: bottom; /* align control with the text next to it*/
}

.codeDisplay {
    margin: auto; /* auto-center */
    font-family: "zx81";
    word-wrap: break-word; /* break for wrapping at any character*/
    white-space: pre; /* preserve all whitespace */
    max-width: 32ch; /* standard width of ZX81 display as default */
    min-width: 32ch; /* min width of standard width on ZX81*/
    line-height: 100%; /* make sure lines hug each other */
    overflow-y: auto;
}

#screenListing {
    max-width: 32ch; /* always 32 columns for the screen display */
}

#audio {
    min-height: 150px;
}

#audio-element {
    width: 100%;
    height: auto;
}

.waveform-bg {
   clip-path: url("#waveform-mask");
   fill: lightgray;
}

.waveform-progress {
   clip-path: url("#waveform-mask");
   fill: darkgray;
}

.infoTitle {
    font-family: "zx81";
    font-size: 14px;
    text-align: center;
}

#infoOverlay {
  position: fixed; /* Sit on top of the page content */
  display: none; /* Hidden by default */
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
  z-index: 1;
  cursor: pointer; /* Add a pointer on hover */
  flex-direction: column;
  flex-shrink: 0;

}

#info {
    background-color: white;
    margin: 80px;
    padding: 10px;
    overflow: scroll;
    min-height: 100px;
}

#info a {
    word-wrap: break-word;
    text-decoration: none;
}

